# confcrawl

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  netlify.toml
config/: venues.yaml
docs/: favorites.html  index.html
docs/assets/: app.js  styles.css
docs/data/: papers.json
scraper/: pyproject.toml
scraper/src/confcrawl/: __init__.py  cli.py  config.py  fetcher.py  models.py  pipeline.py  util.py
scraper/src/confcrawl/scrapers/: __init__.py  base.py
scraper/src/confer/: cli.py  enrichers.py  export.py  fetcher.py  paths.py  util.py
scraper/src/confer/scrapers/: __init__.py  base.py  dateconf.py  dblp.py  linklings.py  researchr.py
scraper/tests/: test_dateconf.py  test_dblp.py  test_enrichers.py  test_linklings.py  test_researchr.py
scraper/tests/fixtures/: dateconf_program.html  researchr_overview_program.html  researchr_program.html  researchr_timeline_program.html
web/: astro.config.mjs  package-lock.json  package.json  smoke.mjs
web/netlify/functions/: github-oauth.ts
web/public/data/: ase2023.json  ase2024.json  ase2025.json  asplos2026.json  ccs2025.json  dac2026.json  date2026.json  fse2023.json  fse2024.json  fse2026.json  hpca2026.json  icse2023.json  icse2024.json  icse2026.json  isca2026.json  issta2023.json  issta2025.json  micro2025.json  nsdi2026.json  oopsla2026.json  osdi2025.json  popl2026.json  sosp2025.json  sp2025.json  tosem2026.json  tse2026.json  usenixsecurity2025.json  venues.json
web/src/layouts/: Layout.astro
web/src/lib/: data.ts
web/src/pages/: index.astro
web/src/scripts/: app.ts  types.ts
(+1 files in other folders)
