[project]
name = "confer"
version = "0.1.0"
description = "Scrape conference/journal programs into a unified schema for a static site."
requires-python = ">=3.10"
authors = [
    { name = "SUPER", email = "hi@repus.me" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
confer = "confer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
